# stochastic

./: CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
scripts/: bootstrap-template.py
src/: distribution_bernoulli.cpp  distribution_beta.cpp  distribution_binomial.cpp  distribution_cauchy.cpp  distribution_chi_squared.cpp  distribution_exponential.cpp  distribution_extreme_value.cpp  distribution_fisher_f.cpp  distribution_gamma.cpp  distribution_geometric.cpp  distribution_laplace.cpp  distribution_logistic.cpp  distribution_lognormal.cpp  distribution_negative_binomial.cpp  distribution_normal.cpp  distribution_pareto.cpp  distribution_poisson.cpp  distribution_rayleigh.cpp  distribution_students_t.cpp  distribution_uniform_int.cpp  distribution_uniform_real.cpp  distribution_weibull.cpp  quack_extension.cpp  rng_utils.cpp  stochastic_extension.cpp
src/include/: callable_traits.hpp  distribution_traits.hpp  rng_utils.hpp  stochastic_extension.hpp  utils.hpp  version.hpp
test/: README.md
test/sql/: normal.test  quack.test
